# qa_guru_python_5_24

./: .gitignore  config.local.env  pyproject.toml  pytest.ini  requirements.txt
mobile_tests_lesson_13/model/: app.py
mobile_tests_lesson_13/utils/selene/: patch_element_mobile_commands.py  patch_selector_strategy.py
tests/android/: test_wikipedia.py
tests/android/allure-results/: 15184e86-27bd-495b-afe4-7230ee011f47-container.json  484b6cf0-5302-4795-91be-434785fc4787-container.json  aeb92571-1d68-4b0f-abba-e035304e1b94-result.json
tests/android/tests/android/allure-results/: 1999d9ba-608c-448d-9ad3-d200304a3dd3-container.json  20c58098-c861-4be7-a249-9068ce9d45b1-result.json  3840eae3-913f-459a-bfc1-62f0e0f5ad00-container.json  3966d798-42ac-4db6-ba06-2b07c0ee7704-container.json  460bdc11-0a53-418f-9b80-d9998ba4dd33-result.json  51697a99-e8ae-4a5b-a687-574c6ebcc096-container.json  58ea0b5a-ed19-4792-bf51-c37b0ff0cdef-container.json  764182b3-063f-49aa-a9bf-d7f8d2975f3a-result.json  a4820d91-75e2-4316-be43-b9d5feaa450e-container.json
